<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Music Samples</string>
    <string name="title">Instruments</string>
    <string name="categories">Select from any of the instrument categories below</string>
    <string name="instructions">Select from any of the samples below</string>
    <string name="strings">strings</string>
    <string name="horns">horns</string>
    <string name="drums">drums</string>
    <string name="synths">synths</string>
    <string name="world">world</string>
    <string name="voice">vocal</string>
    <string name="error"> </string>
    <string name="sample">sample.wav</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="addedtocollection">Sample added to collection !</string>
    <string name="alreadyincollection">Sample already in collection !</string>
    <string name="removedfromcollection">Sample removed from collection !</string>
    <string name="notincollection">This Sample is not in your collection …</string>
    <string name="notfound">No samples currently in your Collection</string>
    <string name="collection">My Collection</string>
    <string name="downloadsuccessful">Audio file downloaded to Internal Storage !</string>
    <string name="downloadfailed">Could not download audio file !</string>
    <string name="duree">Time</string>
    <string name="back">back</string>
    <string name="about">About Us</string>
    <string name="marko">Marko</string>
    <string name="nico">Nico</string>
    <string name="thanks">Thank you to https://sampleswap.org for the free music samples !</string>

</resources>
