<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item

        android:id="@+id/ajouter"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add"
        app:showAsAction="always" />

    <item

        android:id="@+id/supprimer"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item

        android:id="@+id/collection"
        android:title="@string/collection"
        app:showAsAction="always"/>

    <item

        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item

        android:id="@+id/back"
        android:icon="?attr/homeAsUpIndicator"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

</menu>
