<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.ListActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/txtNom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:letterSpacing=".1"
                android:paddingBottom="10dp"
                android:text="@string/sample"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/txtDuree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:paddingTop="6dp"
                android:text="@string/duree"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView

            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
